add_executable(test_spdlog "")
target_sources(test_spdlog PRIVATE test_spdlog.cpp)
target_compile_definitions(test_spdlog PRIVATE -DSPDLOG_ACTIVE_LEVEL=${KALYPSSO_CORE_LOG_LEVEL})
target_link_libraries(test_spdlog PUBLIC kalypsso::core kalypsso::log)
add_test(NAME spdlog COMMAND test_spdlog)
set_property(TEST spdlog PROPERTY LABELS spdlog)
if(Kokkos_ENABLE_OPENMP)
  set_property(TEST spdlog PROPERTY ENVIRONMENT OMP_PROC_BIND=spread OMP_PLACES=threads)
endif()
